--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,10 +144,19 @@ html{ scroll-behavior: smooth}
      
 }
 
+
+#icono{
+     color:white;
+}
+#fondo-icono{
+     background-color:lightskyblue;
+}
 /* Animación jugadores del plantel */
 .jugador:hover{
+     
 	-webkit-animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+             animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+             
 }
 
 @-webkit-keyframes scale-down-center {
