--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,9 +37,7 @@
      padding-top: 10px;
      text-transform: uppercase;
 }
-.encabezaLogo{
-     padding-top: 15px;
-}
+
 .texto-borde{
      -webkit-text-stroke: 1px red;
      color: transparent;
@@ -59,6 +57,10 @@ div.vertical-line{
       margin-right: -150px;
       margin-left: 320px;
       margin-bottom: 15px;
+}
+/*Tamaño segundo header*/
+.headerimg{
+      max-height: 135px;
 }
 
 /*Animacion linea debajo de cada elemento de la navbar */
