--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,198 +1,170 @@
 *{
-     margin: 0px;
-     padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
-
 .navbar{
-     background: rgb(255, 255, 255);
-     height: 50px;
-     margin-bottom: 0px;
-
-
+  background: rgb(255, 255, 255);
+  height: 50px;
+  margin-bottom: 0px;
 }
-
 .fondoMenu{
-     background: #CC1E0E;
+  background: #CC1E0E;
 }
 .partidos{
-     width: 100%;
-     height: 35px;
-     color: white;
-     background: rgb(8, 7, 7);
-
+  width: 100%;
+  height: 35px;
+  color: white;
+  background: rgb(8, 7, 7);
 }
 .leyenda1{
-     font-family: 'Ubuntu', sans-serif;
-     font-size: 11px;
-     padding-left: 100px;
-     padding-right: 12px;
-     padding-top: 10px;
-     text-transform: uppercase;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 11px;
+  padding-left: 100px;
+  padding-right: 12px;
+  padding-top: 10px;
+  text-transform: uppercase;
 }
 .leyenda2{
-     font-family: 'Ubuntu', sans-serif;
-     font-size: 11px;
-     padding-left: 10px;
-     padding-right: 10px;
-     padding-top: 10px;
-     text-transform: uppercase;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 11px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  text-transform: uppercase;
 }
-
 .texto-borde{
-     -webkit-text-stroke: 1px red;
-     color: transparent;
+  -webkit-text-stroke: 1px red;
+  color: transparent;
 }
 div.vertical-line{
-      width: 1px;
-      background-color: hsl(120, 0%, 50%); /* Color de linea */
-      height: 100%;
-      float: left;
+  width: 1px;
+  background-color: hsl(120, 0%, 50%); /* Color de linea */
+  height: 100%;
+  float: left;
 }
 .img-header1{
-      margin-left: 15px;
-      margin-top: 2px;
-      margin-right: -170px;
+  margin-left: 15px;
+  margin-top: 2px;
+  margin-right: -170px;
 }
 .img-sponsor-header{
-      margin-right: -150px;
-      margin-left: 320px;
-      margin-bottom: 15px;
+  margin-right: -150px;
+  margin-left: 320px;
+  margin-bottom: 15px;
 }
-/*Tamaño segundo header*/
+
+/*Inicio tamaño segundo header*/
 .headerimg{
-      max-height: 135px;
+  max-height: 135px;
 }
+/*Fin tamaño segundo header*/
 
 /*Animacion linea debajo de cada elemento de la navbar */
 .nav-item{
-     font-family: 'Raleway', sans-serif;
-     font-size: 14px;
-     font-weight: bold;
-
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  font-weight: bold;
 }
 .nav-link{
-     padding: 0 2em;
-     margin: 0.3em;
-     transition: all .4s;
-
-
+  padding: 0 2em;
+  margin: 0.3em;
+  transition: all .4s;
 }
-
 .nav-link:hover{
-     border-bottom: 3px solid red;
-
+  border-bottom: 3px solid red;
 }
-
 .navbar-nav .nav-item .nav-link{
-     color: black;
+  color: black;
 }
-
-
-
 
 /*Submenu Desplegable */
 .submenu{
 
-     list-style: none;
-     position: absolute;
-     visibility: hidden;
-     margin-bottom: 0;
-     opacity: 0;
-     transition:all .3s;
-
+  list-style: none;
+  position: absolute;
+  visibility: hidden;
+  margin-bottom: 0;
+  opacity: 0;
+  transition:all .3s;
 }
 .submenu li a{
-     display: block;
-     padding: 10px;
-     color:   rgb(143, 143, 143);
-     text-decoration: none;
-     font-family: 'Raleway', sans-serif;
-     background: white;
-
-     transition: .4s;
-     width: 200px;
+  display: block;
+  padding: 10px;
+  color:   rgb(143, 143, 143);
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  background: white;
+  transition: .4s;
+  width: 200px;
 }
 #navbarNav li:hover .submenu{
-     visibility: visible;
-     opacity: 1;
-     background: whitesmoke;
+  visibility: visible;
+  opacity: 1;
+  background: whitesmoke;
 }
 nav ul {
-     margin-top: 0px;
-     margin-bottom: 0;
-    }
-.submenu li a:hover{
-     background:rgba(206, 214, 224,.5);
-     color: red;
+  margin-top: 0px;
+  margin-bottom: 0;
 }
-
+.submenu li a:hover{
+  background:rgba(206, 214, 224,.5);
+  color: red;
+}
 .sub-submenu{
-     list-style: none;
-     position: absolute;
-     visibility: hidden;
-     margin-bottom: 0;
-     opacity: 0;
-     left: 100%;
-     top: 0;
-     transition: opacity 1s;
-     width: 200px;
+  list-style: none;
+  position: absolute;
+  visibility: hidden;
+  margin-bottom: 0;
+  opacity: 0;
+  left: 100%;
+  top: 0;
+  transition: opacity 1s;
+  width: 200px;
 }
 .sub-submenu li a{
-     display: block;
-     padding: 10px;
-     color: rgb(143, 143, 143);
-     text-decoration: none;
-     font-family: 'Raleway', sans-serif;
-     background: white;
-     width: 100%;
-
-
+  display: block;
+  padding: 10px;
+  color: rgb(143, 143, 143);
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  background: white;
+  width: 100%;
 }
-
 #navbarNav .submenu li:hover > .sub-submenu{
-     visibility: visible;
-     opacity: 1;
-     background: whitesmoke;
+  visibility: visible;
+  opacity: 1;
+  background: whitesmoke;
 }
-
-
-
-
-
-
 
 /* Animación para la navbar cuando se junta con el escudo */
 .animacion{
 
-     position: relative;
-     -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
-     animation: mymove 5s infinite;
+  position: relative;
+  -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
+  animation: mymove 5s infinite;
 }
 @-webkit-keyframes mymove {
-     from {left: 0px;}
-     to {left: 200px;}
-   }
+  from {left: 0px;}
+  to {left: 200px;}
+}
 
-   @keyframes mymove {
-     from {left: 0px;}
-     to {left: 200px;}
-   }
-   .animacion {
-     left: -28px;
-     -webkit-animation: slide 0.3s forwards;
-     -webkit-animation-delay: .3s;
-     animation: slide .3s forwards;
-     animation-delay: .05s;
- }
-
- @-webkit-keyframes slide {
-     100% { left: 0; }
- }
-
- @keyframes slide {
-     100% { left: 0; }
- }
-
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
+}
+.animacion {
+  left: -28px;
+  -webkit-animation: slide 0.3s forwards;
+  -webkit-animation-delay: .3s;
+  animation: slide .3s forwards;
+  animation-delay: .05s;
+}
+@-webkit-keyframes slide {
+  100% { left: 0; }
+}
+@keyframes slide {
+  100% { left: 0; }
+}
 
 /* Animación navbar */
 html{ scroll-behavior: smooth}
@@ -200,155 +172,140 @@ html{ scroll-behavior: smooth}
 /*Inicio carousel index*/
 
 .carousel-inner img {
-    width: 100%;
-  }
-  /* Lo comento para que el carousel quede pegado a la navbar
-  .carousel{
-      margin-top: 40px;
-      margin-bottom: 40px;
-  }
-  */
-  .carousel-item{
-      text-align: center;
-      max-height: 500px;
-      width: 100%;
-  }
-  .micarousel{
-       margin: 0px;
-       margin-bottom: 0px;
-  }
-
-  /*Fin carousel index*/
-
-  .container-noticias{
-
-    background-color: rgb(196, 195, 195);
-  }
-.numeros{
-     color: gray;
-     font-weight: bold;
-     text-align: right;
-
+  width: 100%;
 }
+.carousel{
+  margin-bottom: 30px;
+}
+.carousel-item{
+  text-align: center;
+  max-height: 500px;
+  width: 100%;
+}
+.micarousel{
+  margin: 0px;
+  margin-bottom: 0px;
+}
+/*Fin carousel index*/
 
-
+.container-noticias{
+  background-color: rgb(196, 195, 195);
+}
+.numeros{
+  color: gray;
+  font-weight: bold;
+  text-align: right;
+}
 #icono:hover{
-     color:white;
+  color:white;
 }
 #fondo-icono:hover{
-     background-color:lightskyblue;
+  background-color:lightskyblue;
 }
+
 /* Animación jugadores del plantel */
 .jugador:hover{
+  -webkit-animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@-webkit-keyframes scale-down-center {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+@keyframes scale-down-center {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
 
-	-webkit-animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-             animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+/*Footer */
+footer{
+  background: url(../img/fondo-footer.jpg) no-repeat center top;
+  border-top: 1.5px solid red;
+}
+footer .imagen-footer{
+  padding-top: 20px;
+}
+
+footer .imagen-footer a{
+  float: left;
+  margin-left: 5%;
+}
+
+.imagen-footer h3{
+  float: left;
+  margin-top: 30px;
+  margin-left: 20px;
+}
+
+footer .copyright{
+  color: #8b8b8c;
+  font: 500 12px/14px 'Roboto',Helvetica,sans-serif;
+  text-align: center;
+  padding-bottom: 30px;
+}
+footer .redes span{
+  color: #8b8b8c;
+  font: italic 14px/14px 'Roboto',Helvetica,sans-serif;
+  margin-top: 21px;
+  float: center;
+}
+
+footer .redes{
+  float: right;
+  padding-right: 30px;
+  padding-top: 10px;
+  /*margin-top: 2px;
+  margin-right: 7%;*/
+}
+footer .redes-ul{
+  float: right;
+  padding-right: 30px;
+  padding-top: 20px;
+}
+.redes-ul{
+  top: 5px;
+  position: relative;
+}
+footer .redes-ul li{
+  float: right;
+  margin-left: 12px;
+}
+
+#redes-footer{
+  color: red;
+}
+#redes-footer:hover{
+  color: white;
+}
+footer .desarrolladores{
+  color: #8b8b8c;
+  font: 500 12px/14px 'Roboto',Helvetica,sans-serif;
+  text-align: center;
 
 }
 
-@-webkit-keyframes scale-down-center {
-     0% {
-       -webkit-transform: scale(1);
-               transform: scale(1);
-     }
-     100% {
-       -webkit-transform: scale(0.9);
-               transform: scale(0.9);
-     }
-   }
-   @keyframes scale-down-center {
-     0% {
-       -webkit-transform: scale(1);
-               transform: scale(1);
-     }
-     100% {
-       -webkit-transform: scale(0.9);
-               transform: scale(0.9);
-     }
-   }
+/*
+@media screen and (max-width:1200px) and (min-width:0px) {
+.footer_ab {
+background: red;
+position: fixed;
+bottom: 0;
+left: 0;
+width: 100%;
 
-   /*Footer */
-   footer{
-     background: url(../img/fondo-footer.jpg) no-repeat center top;
-
-
-    border-top: 1.5px solid red;
-
-   }
-
-
-  footer .imagen-footer{
-     padding-top: 20px;
-   }
-
-  footer .imagen-footer a{
-     float: left;
-     margin-left: 5%;
-   }
-
-   .imagen-footer h3{
-     float: left;
-     margin-top: 30px;
-     margin-left: 20px;
-   }
-
-   footer .copyright{
-     color: #8b8b8c;
-     font: 500 12px/14px 'Roboto',Helvetica,sans-serif;
-     text-align: center;
-     padding-bottom: 30px;
-   }
-   footer .redes span{
-     color: #8b8b8c;
-     font: italic 14px/14px 'Roboto',Helvetica,sans-serif;
-     margin-top: 21px;
-     float: center;
-   }
-
-   footer .redes{
-     float: right;
-     padding-right: 30px;
-     padding-top: 10px;
-     /*margin-top: 2px;
-     margin-right: 7%;*/
-   }
-   footer .redes-ul{
-        float: right;
-        padding-right: 30px;
-        padding-top: 20px;
-   }
-   .redes-ul{
-        top: 5px;
-        position: relative;
-   }
-   footer .redes-ul li{
-     float: right;
-     margin-left: 12px;
-   }
-
-   #redes-footer{
-        color: red;
-   }
-   #redes-footer:hover{
-     color: white;
-   }
-   footer .desarrolladores{
-     color: #8b8b8c;
-     font: 500 12px/14px 'Roboto',Helvetica,sans-serif;
-     text-align: center;
-
-   }
-
-   /*
-   @media screen and (max-width:1200px) and (min-width:0px) {
-     .footer_ab {
-          background: red;
-          position: fixed;
-          bottom: 0;
-         left: 0;
-          width: 100%;
-
-          color: white;
-   }
+color: white;
+}
 }
 */
