--- a/css/estilo_jugador.css
+++ b/css/estilo_jugador.css
@@ -1,23 +1,29 @@
+
+
 .ficha{
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: 1%;
+    margin-bottom: 1.5%;
 }
 .foto-jugador{
+    box-shadow: 2px 2px 10px #666; 
     background-color: gray;
 }
 .imagen_jugador{
     margin-top: auto;
     
+    
 }
 @media (max-width: 767px){
 .imagen_jugador {
-    
+    box-shadow: 2px 2px 10px #666; 
     height: 515px;
 }
 }
 .contiene-imagen{
-    height: 100%;
-    width: 100%;
+
+     
+    height: 90%;
+    width: 90%;
     
   
 }
@@ -68,16 +74,19 @@
     margin-bottom: 18px;
     
 }
+.roboto{
+    font-family:'Roboto',Helvetica,sans-serif;
+
+}
 
 
 .btn{
     
     margin-top: 20%;
-    border-color: #ffffff;
-    color: white;
-    background-color: rgb(182, 2, 2);
+    
+   
     border-radius: 148px 148px 148px 148px;
     -moz-border-radius: 148px 148px 148px 148px;
     -webkit-border-radius: 148px 148px 148px 148px;
-    border: 13px double #ffffff;
+    
 }
