--- a/css/estilo_jugador.css
+++ b/css/estilo_jugador.css
@@ -7,9 +7,10 @@
 .foto-jugador{
     box-shadow: 2px 2px 10px #666; 
     background-color: gray;
+   height: 550px;
 }
 .imagen_jugador{
-    margin-top: auto;
+   margin: auto;
     
     
 }
@@ -22,8 +23,10 @@
 .contiene-imagen{
 
      
-    height: 90%;
-    width: 90%;
+    
+    margin-left: auto;
+    margin-right: auto;
+   
     
   
 }
