--- a/css/estilos.css
+++ b/css/estilos.css
@@ -411,6 +411,18 @@ html{ scroll-behavior: smooth}
      
 
 }
+.posicion-carta{
+     line-height: 15px;
+          font-size: 14px;
+          color: grey;
+          margin-top: 0;
+          
+          
+}
+h3.nombre{
+     padding-top: 6px;
+     font-weight: bold;
+}
 @media (max-width: 767px){
      .tFijo{
           padding-bottom: 20px;
@@ -421,9 +433,46 @@ html{ scroll-behavior: smooth}
 
 .colorR {
      background-color: #c10f21!important;
+ }.card{
+    margin-left: 0.5px;
+    margin-right: 0.5px;
+   
+
+}
+
+ @media (max-width: 767px){
+     .card{
+          height: 332px;
+          margin-left: 0.5px;
+    margin-right: 0.5px;
+
+     }
+     #fondo-icono{
+          background-color:lightskyblue;
+     }
+
+     .numeros{
+          color: gray;
+          font-weight: bold;
+          text-align: right;
+          font-size: 50px;
+         
+     
+     }
+     .posicion-carta{
+          margin-top: 0;
+          line-height: 15px;
+          font-size: 12px;
+     }
+}
+ @media (max-width: 767px){
+     h3.nombre{
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 17px;
+          padding-top: 3px;
+     }
  }
-
-
 
 
 
